fix: Location endpoint